# LLMInfer

./: .gitignore  CMakeLists.txt  README-cn.md  README.md
demo/: main.cpp
llminfer/include/base/: alloc.h  base.h  buffer.h  cuda_config.h  tick.h  tiktoken.h
llminfer/include/model/: config.h  llama2.h  llama3.h  model.h  raw_model_data.h
llminfer/include/op/: add.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h  swiglu.h
llminfer/include/tensor/: tensor.h
llminfer/source/base/: alloc.cpp  alloc_cpu.cpp  alloc_cuda.cpp  base.cpp  buffer.cpp
llminfer/source/model/: llama2.cpp  llama3.cpp  model.cpp  raw_model_data.cpp
llminfer/source/op/: add.cpp  embedding.cpp  encode.cpp  layer.cpp  matmul.cpp  mha.cpp  rope.cpp  swiglu.cpp
llminfer/source/op/kernels/: kernels_interface.cpp  kernels_interface.h
llminfer/source/op/kernels/cpu/: add_kernel.cpp  add_kernel.h  emb_kernel.cpp  emb_kernel.h  matmul_kernel.cpp  matmul_kernel.h  mha_kernel.cpp  mha_kernel.h  rmsnorm_kernel.cpp  rmsnorm_kernel.h  rope_kernel.cpp  rope_kernel.h  scale_kernel.h  scale_sum_kernel.cpp  scale_sum_kernel.h  softmax_kernel.cpp  softmax_kernel.h  swiglu_kernel.cpp  swiglu_kernel.h
llminfer/source/op/kernels/cuda/: add_kernel.cu  add_kernel.cuh  emb_kernel.cu  emb_kernel.cuh  matmul_kernel.cu  matmul_kernel.cuh  mha_kernel.cu  rmsnorm_kernel.cu  rmsnorm_kernel.cuh  rope_kernel.cu  rope_kernel.cuh  swiglu_kernel.cu
llminfer/source/tensor/: tensor.cpp
test/: CMakeLists.txt  test_main.cpp  utils.cuh
test/test_buffer/: test_buffer.cpp
test/test_op/: test_cu_add.cpp  test_cu_emb.cpp  test_cu_matmul.cpp  test_cu_swiglu.cpp  test_load.cpp  test_rmsnorm.cpp
test/test_tensor/: test_tensor.cpp
tools/: export.py
